session icon links open in new window, fixed small screen donations spacing

--- a/server/public/css/donate.css
+++ b/server/public/css/donate.css
@@ -139,10 +139,6 @@ footer {
   padding: 0.5em; }
 
 #donate {
-  position: fixed;
-  width: 23%;
-  left: 72%;
-  bottom: 5%;
   border: 4px solid #f0f0f0;
   padding: 20px; }
   #donate img + label {
@@ -158,7 +154,7 @@ footer {
     float: right; }
   #donate span {
     vertical-align: middle;
-    margin-left: 10%; }
+    margin-left: 1.5em; }
 
 ul {
   list-style-type: none; }
@@ -219,6 +215,12 @@ p.center {
 #recommendations li {
   padding-bottom: 0.5em; }
 
+@media (min-width: 1024px) {
+  #donate {
+    position: fixed;
+    width: 23%;
+    left: 72%;
+    bottom: 5%; } }
 .center {
   text-align: center; }
 
