--- a/src/sass/options.sass
+++ b/src/sass/options.sass
@@ -155,10 +155,6 @@ footer
 
 
 #donate
-  position: fixed
-  width: 23%
-  left: 72%
-  bottom: 5%
   border: 4px solid $grey
   padding: 20px
 
@@ -177,7 +173,7 @@ footer
       
   span
     vertical-align: middle
-    margin-left: 10%
+    margin-left: 1.5em
 
 ul
   list-style-type: none
@@ -239,3 +235,10 @@ p.center
 
 #recommendations li
   padding-bottom: .5em
+
+@media (min-width: 1024px)
+  #donate
+    position: fixed
+    width: 23%
+    left: 72%
+    bottom: 5%
